--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,7 @@ h1 {
     font-family: "Luxurious Roman", cursive;
     font-size: 60px;
     font-weight: bold;
-    /* color: var(--colorSecundario); */
-    color: var(--colorHover);
+    color: var(--colorSecundario);
 }
 
 h2,
@@ -111,18 +110,20 @@ a {
     display: flex;
     align-items: baseline;
     gap: 20px;
-    width: 330px;
+    width: 30%;
 }
 
 .header__top--right {
     display: flex;
+    justify-content: space-between;
     gap: 20px;
-    width: 330px;
+    width: 30%;
 }
 
 .search {
     display: flex;
     height: auto;
+    width: 60%;
 }
 
 .search input {
@@ -154,9 +155,8 @@ a {
 .header__nav ul {
     list-style: none;
     display: flex;
-    /* justify-content: space-around; */
     justify-content: center;
-    gap: 50px;
+    gap: 60px;
     padding: 20px;
 }
 
@@ -290,7 +290,8 @@ a {
 
 .gridCollections {
     display: grid;
-    grid-template-columns: 500px 500px;
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 300px 300px;
     gap: 20px;
     margin: 50px 0;
@@ -564,6 +565,38 @@ a {
 /* RESPONSIVE */
 
 @media (max-width: 900px) {
+    /* HEADER */
+    /* .header__top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 70px;
+    } */
+    .header__top i {
+        font-size: 25px;
+    }
+    .header__top--left {
+        width: 35%;
+    }
+    .header__top--right {
+        width: 35%;
+    }
+    .search input {
+        width: 100%;
+    }
+    .search a i {
+        font-size: 20px;
+    }
+    .header__nav ul {
+        justify-content: center;
+        gap: 20px;
+    }
+    .header__nav ul li {
+        width: 110px;
+    }
+    .header__nav a:hover {
+        color: var(--colorSecundario);
+    }
     /* T-SHIRTS / HOODIES */
     .collection {
         grid-template-columns: repeat(2, 1fr);
