--- a/css/style.css
+++ b/css/style.css
@@ -651,12 +651,12 @@ a {
         position: absolute;
         top: 100%;
         left: 0;
-        transition: all 0.3s;
+        /* transition: all 0.3s; */
         height: 70px;
     }
-    .search_unvisible {
-        left: 70%;
-    }
+    /* .search_unvisible {
+        transform: translate(70%);
+    } */
     .search a i {
         font-size: 20px;
         padding: 5px 5px 5px 5px;
@@ -677,6 +677,7 @@ a {
         height: calc(100vh - 100%);
         overflow-y: auto;
         transition: all 0.3s;
+        z-index: 1;
     }
     .header__nav ul {
         flex-direction: column;
@@ -695,7 +696,8 @@ a {
         width: 100%;
     }
     .nav_visible {
-        left: 0;
+        transform: translate(100%);
+        /* left: 0; */
     }
     .carousel {
         margin-top: 20%;
@@ -709,5 +711,8 @@ a {
     .collection__item img {
         width: 100%;
         height: 450px;
+    }
+    .allFixed {
+        position: fixed;
     }
 }
