--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,29 @@ p,
 a {
     font-family: "Josefin Sans", sans-serif;
     text-decoration: none;
+    margin-bottom: 0;
+}
+
+h3 {
+    font-size: 18.72px;
+    line-height: 1;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 24px;
+    line-height: 1;
+    font-weight: bold;
+}
+
+h4 {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+p {
+    font-size: 16px;
+    line-height: 1;
 }
 
 span {
@@ -55,7 +78,6 @@ a {
 }
 
 .line {
-    margin-top: 10px;
     height: 5px;
     width: 400px;
     background-color: var(--colorSecundario);
@@ -68,7 +90,7 @@ a {
     align-items: center;
 }
 
-.btn {
+.collectionBtn {
     width: 150px;
     height: 75px;
     border-radius: 5px;
@@ -80,7 +102,7 @@ a {
     cursor: pointer;
 }
 
-.btn:hover {
+.collectionBtn:hover {
     border: 5px solid white;
     color: white;
     background-color: var(--colorSecundario);
@@ -185,33 +207,6 @@ a {
 
 /* CAROUSEL */
 
-
-/* .main__carousel img {
-    height: 350px;
-    width: 33%;
-}
-
-.next,
-.previous {
-    position: absolute;
-    font-size: 80px;
-    cursor: pointer;
-    top: 320px;
-}
-
-.previous {
-    left: 0;
-}
-
-.next {
-    right: 0;
-} */
-
-
-/* .carousel-item {
-    display: flex;
-} */
-
 .carousel-inner {
     height: 350px;
 }
@@ -238,6 +233,9 @@ a {
 
 .infoContent h3 {
     margin-bottom: 10px;
+    font-size: 18.72px;
+    font-weight: bold;
+    line-height: 1;
 }
 
 
@@ -378,15 +376,14 @@ a {
 }
 
 .aboutUs__info h2,
-.aboutUs__info p,
-.aboutUs__info .line {
+.aboutUs__info p {
     width: 50%;
     margin: 20px 70px 20px auto;
     text-align: left;
 }
 
 .aboutUs__info .line {
-    margin-top: 0;
+    margin: 0 60px 0 auto;
 }
 
 
@@ -446,7 +443,6 @@ a {
     background-color: #222831;
     padding: 40px 0 0 0;
     color: white;
-    line-height: 1.5;
 }
 
 .footer h2 {
@@ -455,6 +451,11 @@ a {
 
 .footer__contact {
     margin: 30px 0;
+}
+
+.footer__contact p,
+.footer__info a {
+    line-height: 2;
 }
 
 .footer__flex {
