--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,30 @@ h1 {
 
 h2,
 h3,
+h4 {
+    font-weight: bold;
+    line-height: 1;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h3 {
+    font-size: 19px;
+}
+
+h4,
+p {
+    font-size: 16px;
+}
+
+p {
+    line-height: 1;
+}
+
+h2,
+h3,
 h4,
 h5,
 h6,
@@ -31,28 +55,6 @@ a {
     font-family: "Josefin Sans", sans-serif;
     text-decoration: none;
     margin-bottom: 0;
-}
-
-h3 {
-    font-size: 18.72px;
-    line-height: 1;
-    font-weight: bold;
-}
-
-h2 {
-    font-size: 24px;
-    line-height: 1;
-    font-weight: bold;
-}
-
-h4 {
-    font-size: 16px;
-    font-weight: bold;
-}
-
-p {
-    font-size: 16px;
-    line-height: 1;
 }
 
 span {
@@ -233,9 +235,6 @@ a {
 
 .infoContent h3 {
     margin-bottom: 10px;
-    font-size: 18.72px;
-    font-weight: bold;
-    line-height: 1;
 }
 
 
@@ -307,22 +306,22 @@ a {
 }
 
 .gridCollections {
-    display: grid;
-    width: 100%;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 300px 300px;
-    gap: 20px;
     margin: 50px 0;
 }
 
+.row {
+    padding: 12px 0;
+}
+
 .gridItem {
-    width: 100%;
-    height: 100%;
+    height: 300px;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
+    /* margin: 2px; */
+    /* padding: 0; */
 }
 
 .gridItem img {
@@ -605,6 +604,64 @@ a {
     }
     .header__nav ul li {
         width: 110px;
+    }
+    /* MAIN INFO */
+    .info {
+        gap: 20px;
+    }
+    /* NEW PRODUCTS */
+    .newProducts__product img {
+        height: 150px;
+    }
+    .newProducts__product h4 {
+        padding: 10px;
+        font-size: 14px;
+    }
+    /* COLLECTIONS */
+    .gridCollections {
+        margin: 30px 0;
+    }
+    .gridItem {
+        height: 200px;
+    }
+    .gridItem h2 {
+        font-size: 25px;
+    }
+    .gridItem a {
+        top: 45%;
+    }
+    /* ABOUT US  */
+    .aboutUs {
+        background-color: black;
+        margin-bottom: 25px;
+    }
+    .aboutUs__content {
+        position: static;
+        display: flex;
+    }
+    .aboutUs__content iframe {
+        position: static;
+        height: 200px;
+    }
+    .aboutUs__info {
+        width: 50%;
+        margin: 0;
+        padding: 0;
+        height: 300px;
+    }
+    .aboutUs__info h2,
+    .aboutUs__info p {
+        width: 90%;
+        margin: 20px auto;
+    }
+    .aboutUs__info .line {
+        margin: 0 auto;
+        width: 90%;
+    }
+    /* REVIEWS */
+    /* MORE INFO */
+    .knowMore .infoContainer p {
+        font-size: 14px;
     }
     /* T-SHIRTS / HOODIES */
     .collection {
