--- a/css/style.css
+++ b/css/style.css
@@ -292,8 +292,6 @@ a {
 .newProducts__product:hover {
     cursor: pointer;
     color: var(--colorSecundario);
-    /* background-image: url() ; */
-    /* Give a nice box-shadow */
 }
 
 
@@ -320,8 +318,6 @@ a {
     flex-direction: column;
     align-items: center;
     align-content: center;
-    /* margin: 2px; */
-    /* padding: 0; */
 }
 
 .gridItem img {
@@ -754,8 +750,8 @@ a {
     .header__nav {
         position: absolute;
         top: 100%;
-        width: 40%;
-        left: -40%;
+        width: 70%;
+        left: -70%;
         background-color: var(--colorTerciario);
         height: 100vh;
         overflow-y: auto;
@@ -791,15 +787,12 @@ a {
     .carousel-item img {
         height: 350px;
     }
-    /* MAIN INFO */
-    .infoContainer {
-        padding: 50px 10%;
-        display: flex;
-        justify-content: space-between;
+    .carousel-control-prev,
+    .carousel-control-next {
+        z-index: 0;
     }
+    /* MAIN INFO */
     .info {
-        /* width: 30%; */
-        display: flex;
         flex-direction: column;
         align-items: center;
         gap: 10px;
@@ -868,7 +861,6 @@ a {
     /* ABOUT US  */
     .aboutUs {
         padding: 0;
-        /* background-color: white; */
     }
     .aboutUs__content {
         position: static;
@@ -885,7 +877,6 @@ a {
     }
     .aboutUs__info {
         width: 100%;
-        /* height: 300px; */
         padding: 0;
         margin: 0;
     }
@@ -910,9 +901,7 @@ a {
     }
     /* MORE INFO */
     .knowMore {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        margin-bottom: 20px;
     }
     .knowMore .infoContainer {
         width: 100%;
@@ -922,47 +911,31 @@ a {
         font-size: 30px;
     }
     /* FOOTER */
-    .footer {
-        text-align: center;
-        background-color: #222831;
-        padding: 40px 0 0 0;
-        color: white;
+    .footer h1 {
+        font-size: 50px;
     }
     .footer h2 {
-        color: var(--colorSecundario);
+        font-size: 20px;
+        margin-bottom: 10px;
     }
     .footer__contact {
-        margin: 30px 0;
-    }
-    .footer__contact p,
-    .footer__info a {
-        line-height: 2;
-    }
-    .footer__flex {
-        margin: 50px 0;
-        display: flex;
-        justify-content: space-around;
-    }
-    .footer__info {
-        width: 40%;
+        margin: 30px 0 10px 0;
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 10px;
     }
-    .footer a:hover {
-        color: var(--colorSecundario);
+    .footer__contact p,
+    .footer__info a {
+        font-size: 14px;
+        line-height: 1;
+    }
+    .footer__info {
+        width: 45%;
+        gap: 10px;
     }
     .footer__info i {
-        font-size: 40px;
-        margin: 10px;
-    }
-    .footer__bottom {
-        background-color: var(--colorSecundario);
-        color: black;
-        height: 40px;
-        margin-top: 20px;
-        padding: 10px;
-        position: sticky;
-        bottom: 0;
+        font-size: 35px;
+        margin: 5px;
     }
 }
