--- a/css/style.css
+++ b/css/style.css
@@ -938,4 +938,41 @@ a {
         font-size: 35px;
         margin: 5px;
     }
+    /*End of home page*/
+    /* TITLES */
+    .title {
+        margin: 80px auto 0;
+    }
+    .filterBtn:hover {
+        width: 90px;
+        height: 45px;
+    }
+    /* T-SHIRTS // HOODIES */
+    .collection {
+        padding: 0 20px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
+    .collection__item .heartIcon {
+        font-size: 18px;
+        padding: 4px;
+    }
+    .collection__item .soldOut {
+        font-size: 18px;
+        padding: 4px;
+    }
+    .collection__item img {
+        width: 100%;
+        height: 300px;
+    }
+    .item__description h4 {
+        font-size: 15px;
+    }
+    .item__description h5 {
+        font-size: 12px;
+    }
+    /* SNEAKERS &ACCESSORIES*/
+    .difItem img {
+        height: 170px;
+    }
 }
