--- a/sass/products.scss
+++ b/sass/products.scss
@@ -1,4 +1,4 @@
-$imgHeight: 450px;
+$status: soldOut;
 .title {
     margin: 20px auto 0;
     .filterBtn {
@@ -33,35 +33,36 @@ $imgHeight: 450px;
         .heartIcon {
             font-size: 25px;
             padding: 5px;
-            border: 2px solid var(--colorPrincipal);
+            // border: 2px solid var(--colorPrincipal);
             position: absolute;
             top: 0;
             right: 0;
             cursor: pointer;
             &:hover {
                 color: var(--colorSecundario);
-                background-color: var(--colorPrincipal);
+                // background-color: var(--colorPrincipal);
             }
         }
         .soldOut {
             padding: 5px;
-            border: 2px solid var(--colorPrincipal);
             position: absolute;
-            top: 0;
+            top: 5%;
             left: 0;
-            text-align: center;
+            background-color: var(--colorSecundario);
         }
         img {
             width: 100%;
             height: 450px;
-            border: 1px solid black;
-            object-fit: contain;
+            object-fit: cover;
         }
         .item__description {
             line-height: 1.5;
             margin-top: 10px;
             h5 {
                 color: gray;
+            }
+            .soldOutItem {
+                text-decoration: line-through;
             }
         }
     }
@@ -83,6 +84,7 @@ $imgHeight: 450px;
             .soldOut {
                 font-size: 20px;
                 padding: 3px;
+                top: 75%;
             }
             img {
                 height: 350px;
@@ -122,6 +124,7 @@ $imgHeight: 450px;
             .soldOut {
                 font-size: 18px;
                 padding: 4px;
+                top: 70%;
             }
             img {
                 width: 100%;
