--- a/sass/products.scss
+++ b/sass/products.scss
@@ -54,6 +54,7 @@ $status: soldOut;
             width: 100%;
             height: 450px;
             object-fit: cover;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         }
         .item__description {
             line-height: 1.5;
@@ -84,7 +85,7 @@ $status: soldOut;
             .soldOut {
                 font-size: 20px;
                 padding: 3px;
-                top: 75%;
+                top: 60%;
             }
             img {
                 height: 350px;
@@ -96,8 +97,10 @@ $status: soldOut;
                 }
             }
         }
-        .difItem img {
-            height: 70%;
+        .difItem {
+            img {
+                height: 70%;
+            }
         }
     }
 }
@@ -123,7 +126,7 @@ $status: soldOut;
             }
             .soldOut {
                 font-size: 18px;
-                padding: 4px;
+                padding: 3px;
                 top: 70%;
             }
             img {
@@ -139,8 +142,20 @@ $status: soldOut;
                 }
             }
         }
-        .difItem img {
-            height: 170px;
+        .difItem {
+            .soldOut {
+                top: 5%;
+            }
+        }
+    }
+}
+
+@media (max-width: 550px) {
+    .collection {
+        .difItem {
+            img {
+                height: 170px;
+            }
         }
     }
 }
