--- a/css/style.css
+++ b/css/style.css
@@ -92,24 +92,6 @@ a {
     align-items: center;
 }
 
-.collectionBtn {
-    width: 150px;
-    height: 75px;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 20px;
-    border: 5px solid var(--colorSecundario);
-    color: var(--colorSecundario);
-    background-color: inherit;
-    cursor: pointer;
-}
-
-.collectionBtn:hover {
-    border: 5px solid white;
-    color: white;
-    background-color: var(--colorSecundario);
-}
-
 
 /* HEADER */
 
@@ -215,7 +197,6 @@ a {
 
 .carousel-item img {
     max-height: 350px;
-    /* object-fit: contain; */
     object-fit: cover;
 }
 
@@ -232,6 +213,10 @@ a {
     width: 30%;
     display: flex;
     gap: 10px;
+}
+
+.info i {
+    font-size: 30px;
 }
 
 .infoContent {
@@ -292,9 +277,6 @@ a {
     text-align: center;
 }
 
-
-/* WHEN HOVER ONE PRODUCT SHOW THE MODEL IMAGE */
-
 .newProducts__product:hover {
     cursor: pointer;
     color: var(--colorSecundario);
@@ -334,17 +316,37 @@ a {
 
 .gridItem h2 {
     font-size: 35px;
-    width: 100%;
+    width: 50%;
+    padding: 15px;
+    border-radius: 5px;
     text-align: center;
     position: absolute;
+    background-color: #313b4ba0;
     color: var(--colorSecundario);
+    box-shadow: var(--colorSecundario) 0px 0px 15px;
     top: 25%;
 }
 
-.gridItem button {
+.collectionBtn {
     position: absolute;
     z-index: 1;
-    top: 50%;
+    top: 55%;
+    width: 130px;
+    height: 65px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 3px solid var(--colorSecundario);
+    color: var(--colorSecundario);
+    background-color: inherit;
+    cursor: pointer;
+}
+
+.collectionBtn:hover {
+    border: 3px solid white;
+    color: white;
+    background-color: #313b4ba0;
+    box-shadow: var(--colorSecundario) 0px 0px 15px;
 }
 
 
@@ -500,98 +502,7 @@ a {
 /* HERE ENDS THE HOME PAGE */
 
 
-/* TITLES */
-
-
-/* .title {
-    margin: 20px auto 0;
-}
-
-.filterBtn {
-    width: 80px;
-    height: 40px;
-    font-size: 20px;
-    background-color: white;
-    color: var(--colorPrincipal);
-    border: 5px solid var(--colorPrincipal);
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 30px;
-}
-
-.filterBtn:hover {
-    width: 100px;
-    height: 50px;
-    background-color: var(--colorPrincipal);
-    color: var(--colorSecundario);
-    border: 5px solid var(--colorSecundario);
-} */
-
-
-/* T-SHIRTS // HOODIES */
-
-
-/* .collection {
-    padding: 0 70px;
-    margin-bottom: 50px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto auto;
-    gap: 30px;
-}
-
-.collection__item {
-    position: relative;
-}
-
-.collection__item .heartIcon {
-    font-size: 25px;
-    padding: 5px;
-    border: 2px solid var(--colorPrincipal);
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-}
-
-.collection__item .heartIcon:hover {
-    color: var(--colorSecundario);
-    background-color: var(--colorPrincipal);
-} */
-
-
-/* .collection__item .soldOut {
-    padding: 5px;
-    border: 2px solid var(--colorPrincipal);
-    position: absolute;
-    top: 0;
-    left: 0;
-    text-align: center;
-}
-
-.collection__item img {
-    width: 100%;
-    height: 450px;
-    border: 1px solid black;
-    object-fit: contain;
-}
-
-.item__description {
-    line-height: 1.5;
-    margin-top: 10px;
-}
-
-.item__description h5 {
-    color: gray;
-} */
-
-
-/* SNEAKERS &ACCESSORIES*/
-
-
-/* .difItem img {
-    height: 320px;
-} */
+/* THE CSS OF THE PAGES IS ON THE PRODUCTS CSS FILE (SASS) */
 
 
 /* RESPONSIVE */
@@ -681,29 +592,6 @@ a {
     .knowMore .infoContainer p {
         font-size: 14px;
     }
-    /* T-SHIRTS // HOODIES */
-    /* .collection {
-        padding: 0 50px;
-    }
-    .collection__item .heartIcon {
-        font-size: 20px;
-        padding: 3px;
-    }
-    .collection__item .soldOut {
-        font-size: 20px;
-        padding: 3px;
-    }
-    .collection__item img {
-        height: 350px;
-    }
-    .item__description h5 {
-        color: gray;
-        font-size: 16px;
-    } */
-    /* SNEAKERS & ACCESORIES*/
-    /* .difItem img {
-        height: 70%;
-    } */
 }
 
 
@@ -816,7 +704,6 @@ a {
         gap: 10px;
     }
     .info i {
-        font-size: 30px;
         width: 100%;
         margin-bottom: 5px;
         text-align: center;
@@ -825,7 +712,7 @@ a {
         font-size: 12px;
         text-align: center;
         margin-bottom: 0;
-        font-weight: normal;
+        font-weight: bold;
     }
     .infoContent p {
         display: none;
@@ -956,41 +843,4 @@ a {
         font-size: 35px;
         margin: 5px;
     }
-    /*End of home page*/
-    /* TITLES */
-    /* .title {
-        margin: 80px auto 0;
-    }
-    .filterBtn:hover {
-        width: 90px;
-        height: 45px;
-    } */
-    /* T-SHIRTS // HOODIES */
-    /* .collection {
-        padding: 0 20px;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-    }
-    .collection__item .heartIcon {
-        font-size: 18px;
-        padding: 4px;
-    }
-    .collection__item .soldOut {
-        font-size: 18px;
-        padding: 4px;
-    }
-    .collection__item img {
-        width: 100%;
-        height: 300px;
-    }
-    .item__description h4 {
-        font-size: 15px;
-    }
-    .item__description h5 {
-        font-size: 12px;
-    } */
-    /* SNEAKERS &ACCESSORIES*/
-    /* .difItem img {
-        height: 170px;
-    } */
 }
