--- a/css/style.css
+++ b/css/style.css
@@ -312,31 +312,21 @@ a {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.gridItem h2 {
-    font-size: 35px;
-    width: 74%;
-    padding: 15px;
-    border-radius: 5px;
-    text-align: center;
-    position: absolute;
-    background-color: #313b4ba0;
-    color: var(--colorSecundario);
-    box-shadow: var(--colorSecundario) 0px 0px 15px;
-    top: 25%;
+    /* filter: blur(1px); */
+    filter: brightness(75%);
 }
 
 .collectionBtn {
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     z-index: 1;
-    top: 55%;
     width: 130px;
     height: 65px;
     border-radius: 5px;
     font-weight: bold;
     font-size: 20px;
-    border: 3px solid var(--colorSecundario);
+    border: 5px solid var(--colorSecundario);
     color: var(--colorSecundario);
     background-color: inherit;
     cursor: pointer;
@@ -533,7 +523,6 @@ a {
     align-items: baseline;
     border-bottom: 2px solid rgb(220, 218, 218);
     padding: 10px 20px;
-    /* margin-bottom: 20px; */
 }
 
 .cartTitle h5 {
@@ -548,7 +537,6 @@ a {
     display: flex;
     width: 100%;
     height: 200px;
-    /* gap: 10px; */
     align-items: center;
     justify-content: space-evenly;
     padding: 5px;
@@ -568,7 +556,6 @@ a {
 .cartItemDescription {
     width: 50%;
     height: 60%;
-    /* background-color: #f05454; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -588,7 +575,6 @@ a {
 
 .options {
     display: flex;
-    /* justify-content: space-evenly; */
     gap: 30px;
     align-items: center;
 }
@@ -687,6 +673,7 @@ a {
     font-size: 17px;
     font-weight: bold;
     border-bottom: 2px solid rgb(220, 218, 218);
+    color: black;
 }
 
 .featuredItem {
@@ -720,6 +707,161 @@ a {
 .add {
     width: 100%;
     margin-bottom: 10px;
+}
+
+
+/* CommingSoon Page */
+
+.fullBg {
+    width: 100%;
+    height: 100vh;
+    background-color: #30475e;
+    background-color: var(--colorTerciario);
+    display: flex;
+    flex-direction: column;
+    padding: 100px;
+    gap: 30px;
+    align-items: center;
+    position: relative;
+}
+
+.fullBg h5 {
+    font-size: 30px;
+    color: white;
+    margin-bottom: 30px;
+}
+
+.fullBg h1 {
+    letter-spacing: 5px;
+}
+
+.fullBg h2 {
+    font-size: 20px;
+    font-weight: normal;
+    width: 35%;
+    text-align: center;
+    color: white;
+}
+
+.return {
+    width: 120px;
+    height: 30px;
+    background-color: rgba(255, 255, 255, 0.864);
+    border: none;
+    border-radius: 20px;
+    font-size: 15px;
+    margin: 20px 0;
+    font-weight: 400;
+    color: #715b3f;
+}
+
+.return a {
+    color: inherit;
+    background-color: none;
+}
+
+.return:hover {
+    /* border: 2px solid #d1aa6e; */
+    border: 3px solid white;
+    color: white;
+    background-color: #313b4ba0;
+    box-shadow: var(--colorSecundario) 0px 0px 15px;
+}
+
+.fullBg .icons {
+    font-size: 40px;
+    display: flex;
+    gap: 40px;
+}
+
+.coomingSoonBg,
+.coomingSoonBg2,
+.coomingSoonBg3 {
+    width: 400px;
+    position: absolute;
+}
+
+.coomingSoonBg {
+    transform: rotate(-90deg);
+    top: 0;
+    right: 0;
+}
+
+.coomingSoonBg2 {
+    transform: rotate(-270deg);
+    bottom: 0;
+    left: 0;
+}
+
+.coomingSoonBg3 {
+    width: 200px;
+    bottom: 50px;
+    right: 50px;
+}
+
+
+/* LOGIN */
+
+.loginSection {
+    width: 100%;
+    height: auto;
+    /* background-color: #30475e; */
+    background-color: #30475ebf;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.login {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 50%;
+    align-items: center;
+    padding: 25px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.login h2 {
+    font-size: 30px;
+}
+
+.login form {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin: 30px 0;
+    width: 100%;
+}
+
+.login form input {
+    height: 40px;
+    padding: 10px;
+}
+
+.login form button {
+    border: none;
+    color: var(--colorSecundario);
+    background-color: var(--colorPrincipal);
+    height: 40px;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 2px;
+}
+
+.login form button:hover {
+    background-color: var(--colorTerciario);
+    color: white;
+}
+
+.login a {
+    color: black;
+}
+
+.login a:hover {
+    cursor: pointer;
+    color: #313b4b;
 }
 
 
@@ -904,6 +1046,21 @@ a {
         height: auto;
         font-size: 12px;
     }
+    /* ComingSoon */
+    .fullBg h5 {
+        margin-bottom: 0px;
+    }
+    .fullBg h2 {
+        width: 55%;
+    }
+    .coomingSoonBg,
+    .coomingSoonBg2,
+    .coomingSoonBg3 {
+        width: 200px;
+    }
+    .coomingSoonBg3 {
+        width: 100px;
+    }
 }
 
 
@@ -983,10 +1140,6 @@ a {
     }
     .account {
         display: inline;
-    }
-    .account a {
-        text-decoration: line-through;
-        color: gray;
     }
     .header__nav ul li {
         text-align: left;
@@ -1165,7 +1318,6 @@ a {
     }
     .cartItems {
         box-shadow: none;
-        /* border: 1px solid black; */
         width: 100%;
         height: 100%;
     }
@@ -1250,5 +1402,27 @@ a {
     .cartStars {
         font-size: 25px;
         gap: 5px;
+    }
+    /* LOGIN  */
+    .fullBg h1 {
+        font-size: 40px;
+    }
+    .fullBg h2 {
+        width: 100%;
+    }
+    .fullBg .icons {
+        font-size: 30px;
+        gap: 30px;
+    }
+    .coomingSoonBg,
+    .coomingSoonBg2,
+    .coomingSoonBg3 {
+        width: 150px;
+    }
+    .coomingSoonBg3 {
+        width: 100px;
+        bottom: 20px;
+        right: 20px;
+        /* transform: translate(50%); */
     }
 }
